--- a/src/style/layout/ApartmentThumbanail.scss
+++ b/src/style/layout/ApartmentThumbanail.scss
@@ -6,28 +6,31 @@
     
     
     .Apartment {
-        position: relative;
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin: 0 auto;
+    width: 340px;
+    height: 340px;
+    background-color: white;
+    margin: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    transition: 0.1s transform;
     }
     img {
-        width: 400px;
-        height: 250px;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
-        border-radius: 1rem;
-        filter: brightness(80%);
-        transform: scale(1);
-        &:hover {
-            box-shadow: 0px 2px 8px 3px rgba(115,115,115,0.38);
-            filter: brightness(100%);
-            transform: scale(1.01); 
+        position: absolute; 
         }
     @media screen and (max-width:variables.$mobile) {
-        min-height: 200px;
+       width: 100%;
         display: block;
-    }
+        .Apartment{
+            width: 100%;
+            height: 250px;
+            margin: 5px 0;
         }
+    }
+}
         
         .Apartment__sub {
             width: 50%;
@@ -37,4 +40,4 @@
             padding-left: 10px;
             
         }
-    }
+    
