--- a/src/style/Base.scss
+++ b/src/style/Base.scss
@@ -3,9 +3,8 @@
 body {
     max-width: variables.$laptop;
     margin: 0 auto;
-    padding: 0;
     font-family: 'Montserrat', sans-serif;
-    @media (max-width:variables.$mobile) {
-        padding: 0;
+    #root {
+        margin: 0 auto;
     }
 }
